# tinytcad

./: .gitignore  CMakeLists.txt  README.md  build.sh  clang-format  plot_result.py  test_api.py  test_full.py
pythonapi/: CMakeLists.txt  python_bind.cpp
src/: CMakeLists.txt  main.cpp
src/io/: CMakeLists.txt  io.cpp  io.h
src/mesh/: CMakeLists.txt  mesh.cpp  mesh.h
src/solver/: CMakeLists.txt  solver.cpp  solver.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h
tests/: plot_result.py  test_api.py  test_full.py
